fix for footer on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ span {
 .app-container {
 	position: relative;
 	min-height: 100vh;
+	min-height: -webkit-fill-available;
 	display: flex;
 	flex-direction: column;
 }
